--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
   output:
     ansi:
       enabled: always
-logging:
-  file:
-    path: logs
-  level:
-    com:
-      yeonho:
-        springinit: DEBUG
+#logging:
+#  file:
+#    path: logs
+#  level:
+#    com:
+#      yeonho:
+#        springinit: DEBUG
