spring-data-jpa, flyway

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,12 @@ spring:
     url: jdbc:postgresql://localhost:5432/springboot
     username: jihan
     password: pass
+
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    generate-ddl: false
+    show-sql: true
+
+  flyway:
+    baseline-on-migrate: true
